# flowscale-nodes

./: .gitignore  Makefile  OPTIMIZATION_NOTES.md  README.md  __init__.py  api.py  constants.py  node.py  node_index.py  pyproject.toml  requirements.txt  version-map.json
api/: __init__.py  custom_node.py  input.py  io.py  log.py  model.py  output.py
docs/: DEVELOPMENT.md
nodes/: flowscale_volume_utils.py  github_readme_extractor.py  hunyuan3d.py  input.py  model_utils.py  s3_utils.py  upload.py  webhook.py
nodes/io/: audio.py  image.py  integer.py  lora.py  text.py  threed.py  video.py
scripts/: lint.sh  setup-dev.sh
utilitynodes/: file_extractor.py  fileloader.py  json_extractor.py  multifileloader.py  time_utils.py  webhook.py
web/css/: emoji.css
web/js/: flowscale.core.js
